@@ -1,4 +1,6 @@
 === 1.0.0 (master)
+* Improved Performance
+* :random colors removed (see readme)
 * Seperate Paint::SHORTCUTS into extra gem
 * Drop support for Ruby 1 (inoffically still support 1.9.3)
 
